--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <h1>Tropicaliiiii</h1>
-<p>tropicali is a new restaurant in the heart of Santa Fe, New Mexico. We serve casual fine dining Latin American cuisine with a little Southwestern twist. Ask us how to make your burrito “Christmas style”!</p>
-
+<p>tropicali is a new restaurant in the heart of Santa Fe, New Mexico. We serve casual fine dining Latin American
+  cuisine with a little Southwestern twist. Ask us how to make your burrito “Christmas style”!</p>
 <p>Site launching March</p>
